# Functional-Programming

./: stack.yaml
hw1/: hw1.cabal
hw1/src/: Folds.hs  Monoids.hs  PatternMatching.hs  SimpleFunctions.hs
hw1/src/ADTWorld/: Entities.hs  NatNumbers.hs  Trees.hs  Vectors.hs  WeekDays.hs
hw1/src/Test/: SimpleFunctionsTests.hs
hw1/test/: FoldsSpec.hs  MonoidsSpec.hs  PatternMatchingSpec.hs  SimpleFunctionsSpec.hs
hw1/test/ADTWorld/: EntitiesSpec.hs  NatNumbersSpec.hs  TreesSpec.hs  VectorsSpec.hs  WeekDaysSpec.hs
hw2/: README.md  hw2.cabal
hw2/src/: NondeterministicCalculations.hs
hw2/src/BasicTypeClasses/: ChaoticGood.hs  Proofs.hs
hw2/src/BasicTypeClasses/Fishes/: MonadFishInstances.hs  MonadInstances.hs  MonadJoinInstances.hs  Monads.hs
hw2/src/OptionalMonad/: ArithmeticExpression.hs  PartialFunctions.hs
hw2/src/ParserCombinators/: AParser.hs  SExpr.hs
hw2/test/: NondeterministicCalculationsSpec.hs
hw2/test/OptionalMonad/: ArithmeticExpressionSpec.hs
hw2/test/ParserCombinators/: AParserSpec.hs  SExprSpec.hs
hw3/: README.md  hw3.cabal
hw3/src/: ArithmeticExpression.hs  ConsoleInput.hs  ConsoleOutput.hs  CustomError.hs  ExpressionParser.hs  FullValueAssignment.hs  RunFile.hs  UpdateVariables.hs  VariableCreationParser.hs  input.in
hw3/test/: ArithmeticExpressionSpec.hs  ExpressionParserSpec.hs  FullValueAssignmentSpec.hs  UpdateVariablesSpec.hs  VariableCreationParserSpec.hs
hw4/: LICENSE  README.md  hw4.cabal
hw4/bench/: Main.hs
hw4/src/: Comonads.hs  CustomShow.hs  FSLens.hs  Lens.hs  TemplateHaskell.hs
hw4/src/Algo/: MapNub.hs  MergeSortNub.hs
hw4/test/: LensSpec.hs
