name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Anna Kustareva
maintainer:          example@example.com
copyright:           2017 Anna Kustareva

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     SimpleFunctions
                     , PatternMatching
                     , ADTWorld.WeekDays
                     , ADTWorld.Entities
                     , ADTWorld.Vectors
                     , ADTWorld.NatNumbers
                     , ADTWorld.Trees
                     , Folds
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , random
  default-language:    Haskell2010

test-suite hw1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       SimpleFunctionsSpec
                     , PatternMatchingSpec
                     , ADTWorld.WeekDaysSpec
                     , ADTWorld.EntitiesSpec
                     , ADTWorld.VectorsSpec
                     , ADTWorld.NatNumbersSpec
                     , ADTWorld.TreesSpec
                     , FoldsSpec
  build-depends:       base
                     , hw1
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010