name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw2#readme
license:             MIT
license-file:        LICENSE
author:              Anna Kustareva
maintainer:          example@example.com
copyright:           2017 Anna Kustareva

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     OptionalMonad.ArithmeticExpression
                     , OptionalMonad.PartialFunctions
                     , NondeterministicCalculations
                     , ParserCombinators.AParser
                     , ParserCombinators.SExpr
                     , BasicTypeClasses.Fishes.Monads
                     , BasicTypeClasses.Fishes.MonadInstances
                     , BasicTypeClasses.Fishes.MonadFishInstances
                     , BasicTypeClasses.Fishes.MonadJoinInstances
                     , BasicTypeClasses.ChaoticGood
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010

test-suite hw2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       OptionalMonad.ArithmeticExpressionSpec
                     , NondeterministicCalculationsSpec
                     , ParserCombinators.AParserSpec
                     , ParserCombinators.SExprSpec
  build-depends:       base
                     , hw2
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010