name:                hw3
version:             0.1.0.0
synopsis:            Synopsis for task 3
description:         Task 3 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw3#readme
license:             MIT
license-file:        LICENSE
author:              Anna Kustareva
maintainer:          example@example.com
copyright:           2017 Anna Kustareva

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     ArithmeticExpression
                     , ExpressionParser
                     , UpdateVariables
                     , VariableCreationParser
                     , FullValueAssignment
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , containers
                     , mtl
                     , megaparsec
  default-language:    Haskell2010

test-suite hw3-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ArithmeticExpressionSpec
                     , ExpressionParserSpec
                     , UpdateVariablesSpec
                     , VariableCreationParserSpec
                     , FullValueAssignmentSpec
  build-depends:       base
                     , hw3
                     , hspec
                     , containers
                     , mtl
                     , megaparsec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010